--- a/public/styles/base/utils.less
+++ b/public/styles/base/utils.less
@@ -47,6 +47,18 @@
   transition:         @arguments;
 }
 
+.keyframes(@name; @arguments) {
+  @-moz-keyframes     @name { @arguments(); }
+  @-webkit-keyframes  @name { @arguments(); }
+  @keyframes          @name { @arguments(); }
+}
+
+.animation(@arguments) {
+  -webkit-animation:  @arguments;
+  -moz-animation:     @arguments;
+  animation:          @arguments;
+}
+
 .transform(@string) {
   -webkit-transform:  @string;
   -moz-transform: 	  @string;
