--- a/public/styles/base/components/modal-image.less
+++ b/public/styles/base/components/modal-image.less
@@ -8,6 +8,7 @@
   padding-top: 100px;
   padding-bottom: 100px;
   text-align: center;
+  background: lighten(#000000, 10%);
   background: rgba(0, 0, 0, 0.9);
   z-index: 1;
 
