add class for usage in ie8

--- a/public/styles/base/components/gallery.less
+++ b/public/styles/base/components/gallery.less
@@ -19,5 +19,10 @@
     &:nth-child(4n) {
       clear: both;
     }
+
+    //set on every first row image in ie8
+    &.clear {
+      clear: both;
+    }
   }
 }
