--- a/public/styles/index.less
+++ b/public/styles/index.less
@@ -1,1 +1,5 @@
 @import "base/main";
+@import "base/components/breadcrumb";
+@import "base/components/gallery";
+@import "base/components/modal-image";
+@import "base/components/pagination";
