make without last-child (ie8 support)

--- a/public/styles/base/components/breadcrumb.less
+++ b/public/styles/base/components/breadcrumb.less
@@ -10,11 +10,11 @@
       color: @color;
       padding-left: 0.25em;
     }
-    &:last-child:after {
-      display: none;
-    }
     &.active {
       color: @color;
+      &:after {
+        display: none;
+      }
     }
   }
 
