use carousel in index page

--- a/public/styles/index.less
+++ b/public/styles/index.less
@@ -3,3 +3,18 @@
 @import "base/components/gallery";
 @import "base/components/modal-image";
 @import "base/components/pagination";
+@import "base/components/carousel";
+
+.carousel {
+  height: 700px;
+  border: 1px solid #eee;
+
+  .box {
+    padding: 15px;
+    text-align: center;
+  }
+
+  img {
+    width: 433px;
+  }
+}
