--- a/public/styles/base/components/carousel.less
+++ b/public/styles/base/components/carousel.less
@@ -26,8 +26,8 @@
       .opacity(1);
     }
 
-    @controls-bg: #333;
-    @controls-arrow: #eee;
+    @controls-bg: @dark-grey;
+    @controls-arrow: @light-grey;
     @controls-size: 30px;
     @arrow-height: 18px;
     @arrow-width: 10px;
