--- a/public/styles/base/components/gallery.less
+++ b/public/styles/base/components/gallery.less
@@ -12,8 +12,8 @@
 
     .caption {
       padding: 10px;
-      background: #eee;
-      color: darken(#eee, 40%);
+      background: @light-grey;
+      color: @grey;
     }
 
     &:nth-child(4n) {
