--- a/public/styles/base/components/modal-image.less
+++ b/public/styles/base/components/modal-image.less
@@ -8,8 +8,8 @@
   padding-top: 100px;
   padding-bottom: 100px;
   text-align: center;
-  background: lighten(#000000, 10%);
-  background: rgba(0, 0, 0, 0.9);
+  background: @black;
+  background: fade(@black, 90%);
   z-index: 10;
 
   .caption, img {
@@ -29,7 +29,7 @@
     display: block;
     margin-top: 15px;
     font-size: 1.3em;
-    color: #eee;
+    color: @light-grey;
   }
 
   .keyframes(zoom; {
