--- a/public/styles/base/components/pagination.less
+++ b/public/styles/base/components/pagination.less
@@ -1,4 +1,3 @@
-@ref-color: #2eb3ee; //temporary
 .pagination {
   display: inline-block;
 
@@ -10,17 +9,17 @@
       padding: 5px 10px;
       text-decoration: none;
       color: @ref-color;
-      border-right: 1px solid #eee;
-      border-top: 1px solid #eee;
-      border-bottom: 1px solid #eee;
+      border-right: 1px solid @light-grey;
+      border-top: 1px solid @light-grey;
+      border-bottom: 1px solid @light-grey;
 
       &:hover, &.active {
-        background-color: #ddd;
+        background-color: darken(@light-grey, 7%);
       }
     }
 
     &:first-child a {
-      border-left: 1px solid #eee;
+      border-left: 1px solid @light-grey;
       .border-radius(5px, 0, 0, 5px);
     }
 
