complete expamle of usage all components

--- a/public/styles/index.less
+++ b/public/styles/index.less
@@ -4,6 +4,8 @@
 @import "base/components/modal-image";
 @import "base/components/pagination";
 @import "base/components/carousel";
+@import "base/components/dropdown";
+@import "base/components/form";
 
 .carousel {
   height: 700px;
@@ -17,4 +19,8 @@
   img {
     width: 433px;
   }
+}
+
+.dropdown {
+  vertical-align: top;
 }
