--- a/public/styles/base/main.less
+++ b/public/styles/base/main.less
@@ -47,7 +47,7 @@ body, html {
   bottom: 0;
 }
 
-.main-content {
+.content-wrapper {
   overflow: auto;
   padding-top: 66px;
   padding-bottom: 62px;
