small restyle breadcrumb

--- a/public/styles/base/components/breadcrumb.less
+++ b/public/styles/base/components/breadcrumb.less
@@ -1,4 +1,9 @@
 .breadcrumb {
+  margin: 5px 0;
+  padding: 5px;
+  background: @light-grey;
+  .border-radius(5px);
+
   li {
     display: inline;
 
