add social fade on hover

--- a/public/styles/base/header-footer.less
+++ b/public/styles/base/header-footer.less
@@ -73,6 +73,10 @@
       width: @social-size;
       height: @social-size;
       margin-right: 25px;
+
+      &:hover {
+        .opacity(0.7);
+      }
     }
 
     [href*="vk"] {
