remove not flexible first row element selector

--- a/public/styles/base/components/gallery.less
+++ b/public/styles/base/components/gallery.less
@@ -16,11 +16,7 @@
       color: @grey;
     }
 
-    &:nth-child(4n) {
-      clear: both;
-    }
-
-    //set on every first row image in ie8
+    //set on every first row image
     &.clear {
       clear: both;
     }
