--- a/public/styles/quizzes.less
+++ b/public/styles/quizzes.less
@@ -14,3 +14,49 @@
 .order-ico {
   margin-left: 5px;
 }
+
+@like-size: 24px;
+.like {
+  display: inline-block;
+  width: @like-size;
+  height: @like-size * 2;
+  text-align: center;
+  font-size: 0.9em;
+
+  &:before {
+    content: '';
+    display: block;
+    width: @like-size;
+    height: @like-size;
+    background: url("../img/like.png");
+  }
+}
+
+.quiz {
+  padding: 15px 0;
+  margin-top: 15px;
+  border-bottom: 2px solid darken(@light-grey, 10%);
+
+  .quiz-header {
+    h2 {
+      float: left;
+      color: @primary;
+      margin: 0;
+    }
+  }
+
+  .quiz-description {
+    border-left: 2px solid @primary;
+    padding: 15px 5px;
+  }
+
+  a {
+    float: right;
+    margin: 0;
+  }
+}
+
+.pagination-container {
+  margin-top: 15px;
+  text-align: center;
+}
