increase pagination button size on mobiles

--- a/public/styles/base/components/pagination.less
+++ b/public/styles/base/components/pagination.less
@@ -17,6 +17,10 @@
       &:hover, &.active {
         background-color: darken(@light-grey, 7%);
       }
+
+      @media only screen and (max-width: @media-width) {
+        padding: 15px 20px;
+      }
     }
 
     &:first-child a {
