--- a/public/styles/quizzes.css
+++ b/public/styles/quizzes.css
@@ -845,6 +845,11 @@ body {
 .pagination li a.active {
   background-color: #dddddd;
 }
+@media only screen and (max-width: 768px) {
+  .pagination li a {
+    padding: 15px 20px;
+  }
+}
 .pagination li:first-child a {
   border-left: 1px solid #eeeeee;
   -webkit-border-radius: 5px 0 0 5px;
