--- a/public/styles/quiz.less
+++ b/public/styles/quiz.less
@@ -2,6 +2,14 @@
 @import "base/components/breadcrumb";
 @import "base/components/form";
 
+#start {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -58px;
+  margin-top: -18.5px;
+}
+
 .qu-form {
   max-width: 600px;
   margin: 15px auto;
@@ -98,4 +106,9 @@
       float: none;
     }
   }
+}
+
+.quiz-result {
+  color: @primary;
+  text-align: center;
 }
