--- a/templates/header.ejs
+++ b/templates/header.ejs
@@ -1,7 +1,7 @@
 <header class="main-header container row">
     <div class="logo col-3 col-s-2">
         <h1 class="desktop">
-            Quiz<span class="logo-ninja">Ninja</span>
+            <a href="index">Quiz<span class="logo-ninja">Ninja</span></a>
         </h1>
         <h1 class="mobile">
             Q<span class="logo-ninja">N</span>
