--- a/public/styles/base/header-footer.less
+++ b/public/styles/base/header-footer.less
@@ -9,8 +9,11 @@
 .logo h1 {
   padding: @header-top-padding 0;
   margin: 0;
-  color: @light-grey;
-  cursor: default;
+
+  a {
+    color: @light-grey;
+    text-decoration: none;
+  }
 
   .logo-ninja {
     color: @ref-color;
