create typechecker for throwing type errors

--- a/templates/head.ejs
+++ b/templates/head.ejs
@@ -5,6 +5,7 @@
         quizzes online,free quiz,quiz questions,quiz game,quiz com,
         quiz time,quiz test,testing,online testing,http testing,www testing,testing test com">
 <meta name="author" content="Alexander Amirov">
+<script type="text/javascript" src="/scripts/typechecker.js"></script>
 <!-- IE Support -->
 <!--[if lt IE 11]>
 <script type="text/javascript" src="/scripts/polyfill.js"></script>
