--- a/templates/quiz.ejs
+++ b/templates/quiz.ejs
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="/styles/quiz.css">
     <script defer src="/scripts/ajax-util.js" type="text/javascript"></script>
+    <script defer src="/scripts/error-provider.js" type="text/javascript"></script>
     <script defer src="/scripts/components/quiz-utility.js" type="text/javascript"></script>
     <script defer src="/scripts/quiz.js" type="text/javascript"></script>
 
