--- a/templates/quizzes.ejs
+++ b/templates/quizzes.ejs
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="/styles/quizzes.css">
     <script defer src="/scripts/ajax-util.js" type="text/javascript"></script>
+    <script defer src="/scripts/error-provider.js" type="text/javascript"></script>
     <script defer src="/scripts/paginator.js" type="text/javascript"></script>
     <script defer src="/scripts/quizzes.js" type="text/javascript"></script>
 
