--- a/templates/quiz.ejs
+++ b/templates/quiz.ejs
@@ -27,7 +27,7 @@
                 <span class="qu-timer col-2 col-s-12"></span>
             </header>
             <p class="qu-question"></p>
-            <div class="qu-options"></div>
+            <ul class="qu-options"></ul>
             <footer class="row">
                 <div class="btn-group btn-left">
                     <span class="qu-btn-previous btn-primary">Previous</span>
