--- a/templates/head.ejs
+++ b/templates/head.ejs
@@ -1,4 +1,5 @@
 <meta charset="UTF-8">
+<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="tests,quiz,http quiz,www quiz,
