refactor: move common scripts to folder

--- a/templates/head.ejs
+++ b/templates/head.ejs
@@ -8,7 +8,7 @@
 <meta name="author" content="Alexander Amirov">
 <!-- IE Support -->
 <!--[if lt IE 11]>
-<script type="text/javascript" src="/scripts/polyfill.js"></script>
+<script type="text/javascript" src="/scripts/common/polyfill.js"></script>
 <![endif]-->
 <!--[if lt IE 9]>
 <script type="text/javascript"
