--- a/templates/quizzes.ejs
+++ b/templates/quizzes.ejs
@@ -5,9 +5,9 @@
     <meta name="description" content="Quiz ninja list of all quizzes">
 
     <link rel="stylesheet" type="text/css" href="/styles/quizzes.css">
-    <script defer src="/scripts/ajax-util.js" type="text/javascript"></script>
-    <script defer src="/scripts/error-provider.js" type="text/javascript"></script>
-    <script defer src="/scripts/paginator.js" type="text/javascript"></script>
+    <script defer src="/scripts/common/ajax-util.js" type="text/javascript"></script>
+    <script defer src="/scripts/common/error-provider.js" type="text/javascript"></script>
+    <script defer src="/scripts/common/paginator.js" type="text/javascript"></script>
     <script defer src="/scripts/quizzes.js" type="text/javascript"></script>
 
     <%- include('head'); %>
