--- a/public/styles/quiz.less
+++ b/public/styles/quiz.less
@@ -2,6 +2,7 @@
 @import "base/components/breadcrumb";
 @import "base/components/form";
 @import "base/components/sharing";
+@import "base/components/error-popup";
 
 #start {
   position: absolute;
