--- a/public/styles/quizzes.less
+++ b/public/styles/quizzes.less
@@ -2,6 +2,7 @@
 @import "base/components/breadcrumb";
 @import "base/components/pagination";
 @import "base/components/form";
+@import "base/components/error-popup";
 
 #order {
   display: none;
