--- a/templates/quiz.ejs
+++ b/templates/quiz.ejs
@@ -9,6 +9,7 @@
     <script defer src="/scripts/common/ajax-util.js" type="text/javascript"></script>
     <script defer src="/scripts/common/error-provider.js" type="text/javascript"></script>
     <script defer src="/scripts/components/quiz-utility.js" type="text/javascript"></script>
+    <script defer src="/scripts/components/error-notifier.js" type="text/javascript"></script>
     <script defer src="/scripts/quiz.js" type="text/javascript"></script>
 
     <%- include('head'); %>
@@ -65,6 +66,7 @@
         </ul>
     </aside>
 </section>
+<div class="error-popup"></div>
 <%- include('footer'); %>
 </body>
 </html>
