--- a/templates/quizzes.ejs
+++ b/templates/quizzes.ejs
@@ -8,6 +8,7 @@
     <script defer src="/scripts/common/ajax-util.js" type="text/javascript"></script>
     <script defer src="/scripts/common/error-provider.js" type="text/javascript"></script>
     <script defer src="/scripts/common/paginator.js" type="text/javascript"></script>
+    <script defer src="/scripts/components/error-notifier.js" type="text/javascript"></script>
     <script defer src="/scripts/quizzes.js" type="text/javascript"></script>
 
     <%- include('head'); %>
@@ -38,6 +39,7 @@
     <div class="pagination-container">
     </div>
 </section>
+<div class="error-popup"></div>
 <%- include('footer'); %>
 </body>
 </html>
