add progress-bar showed after quiz end

--- a/public/styles/quiz.less
+++ b/public/styles/quiz.less
@@ -3,6 +3,7 @@
 @import "base/components/form";
 @import "base/components/sharing";
 @import "base/components/error-popup";
+@import "base/components/progress-bar";
 
 #start {
   position: absolute;
@@ -147,6 +148,10 @@
 
 .wrong {
   border-color: lighten(@danger, 15%);
+}
+
+.progress-bar {
+  margin-bottom: 15px;
 }
 
 //Sharing
