--- a/public/styles/quiz.css
+++ b/public/styles/quiz.css
@@ -1041,6 +1041,26 @@ body {
   background: url('../img/error.png') rgba(217, 83, 79, 0.75) 5px center no-repeat;
   z-index: 1000;
 }
+.progress-bar {
+  position: relative;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  padding: 8px;
+  background-color: #7d7d7d;
+}
+.progress-bar .bar {
+  height: 100%;
+  background-color: #5cb85c;
+}
+.progress-bar .counter {
+  position: absolute;
+  top: 50%;
+  margin-top: -8px;
+  left: 50%;
+  margin-left: -15.5px;
+  color: #eeeeee;
+}
 #start {
   position: absolute;
   left: 50%;
@@ -1174,6 +1194,9 @@ body {
 }
 .wrong {
   border-color: #e7908e;
+}
+.progress-bar {
+  margin-bottom: 15px;
 }
 .content-wrapper {
   position: relative;
