wrap mobile logo into link to home

--- a/templates/header.ejs
+++ b/templates/header.ejs
@@ -4,7 +4,7 @@
             <a href="index">Quiz<span class="logo-ninja">Ninja</span></a>
         </h1>
         <h1 class="mobile">
-            Q<span class="logo-ninja">N</span>
+            <a href="index">Q<span class="logo-ninja">N</span></a>
         </h1>
     </div>
     <nav class="main-nav col-9 col-s-10">
