--- a/public/styles/quiz.less
+++ b/public/styles/quiz.less
@@ -79,11 +79,12 @@
     padding-left: 0;
 
     .qu-input-group {
-      padding: 15px 7px;
+      padding: 12px 7px;
       display: block;
 
       label {
         padding: 5px 10px;
+        display: inline-block;
       }
 
       input {
