--- a/public/styles/index.less
+++ b/public/styles/index.less
@@ -58,6 +58,12 @@
 }
 
 @media only screen and (max-width: @media-width) {
+  .panel:first-child {
+    margin-top: 0;
+  }
+  .panel {
+    margin-top: 15px;
+  }
   .panel, .info {
     padding-left: 15px;
   }
