--- a/public/styles/index.less
+++ b/public/styles/index.less
@@ -62,7 +62,7 @@
     margin-top: 0;
   }
   .panel {
-    margin-top: 15px;
+    margin-top: @vertical-margin;
   }
   .panel, .info {
     padding-left: 15px;
